--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ main{
     margin-left:-200px;
 }
 .headerclass{
-    background-color:#636262;
+    background-color:#5c5b5b;
     height:65px;
     display:flex;
     justify-content: center;
@@ -379,8 +379,8 @@ a{
     transform: scale(1.3);
 }
 .bestofElectronic_Container{
-    height:310px;
-    background-color: red;
+    height:510px;
+    
     width:99%;
 }
 .bestofElectronicmoreOption{
@@ -424,12 +424,12 @@ a{
 }
 .bestofElectronic_list{
     display: flex;
+    height:710;
     
 }
 .bestofElectronic_image_Product{
-   height:210;
+   height:510;
    text-align: center;
-   height:210px; 
    display: flex;
    align-items: center;  
    justify-content: center;
@@ -437,11 +437,12 @@ a{
    
 }
 .bestofElectronic_image_Product img {
-    width:90%;
-    max-height: 210px;
+    width:100%;
+    max-height: 610px;
     display: flex;
     justify-content: center;
     align-items: center;
+    height:400px;
     
 }
 .bestofElectronicProduct_name{
@@ -463,6 +464,8 @@ a{
 .bestofElectronic_product_item{
     display:flex;
     overflow: hidden;
+   
+    
 }
 .cart-badge {  
     right: 0;
@@ -493,13 +496,22 @@ a{
     color: rgb(51, 51, 51);
     width:300px;
     margin-top:-30px;
+    font-weight: bolder;
   }
   .getstarted span{
     float: right;
    
   }
+  .arrowleft{
+    float: left;
+    margin-left:-45px;
+    margin-top:-55px;
+    cursor: pointer;
+   
+  }
   .googlespan{
    margin-left:-25px;
+   
   }
   .googlespan img{
     float:left;
@@ -521,8 +533,19 @@ a{
     border: 1px solid rgb(153, 153, 153);
     transition: background 0.5s ease-out 0s;
     margin-top:20px;
+    cursor: pointer;
   }
   .ordiv{
     text-align: center;
-    margin-top:10px;
+    margin-top:50px;
   }
+  input {
+   
+    border-left:0px;
+    border-top:0px;
+    border-right:0px;
+    width:300px;
+}
+.left{
+    float:left;
+}
