--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,15 @@
 .close {
-  font-size: 20px;
+  font-size: 30px;
   cursor: pointer;
   padding-left:15px;
 }
 .popup {
     display: none;
     position: absolute;
-    top: 60;
+    top: -50;
     left: 300;
     width: 20%;
-    height: 75%;
+    height: 115%;
     z-index: 100;
 }
 .signupview{
@@ -56,7 +56,7 @@
     position: absolute;
     top: 50%;
     left: 125%;
-    height: 525px;
+    height: 600px;
     width:450px;
     transform: translate(-50%, -50%);
     background-color: #fff;    
@@ -65,7 +65,7 @@
     display:flex;
 }
 .loginbtn{
-    background: #fb641b;
+   
     box-shadow: 0 1px 2px 0 rgba(0,0,0,.2);
     border: none;
     color: #fff;
@@ -73,6 +73,18 @@
     height: 48px;
     font-size: 15px;
 }
+.btncontinue{
+  background-color: #878787; 
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,.2);
+  border: none;
+  color: #fff;
+  width: 100%;
+  height: 48px;
+  font-size: 15px;
+  border-radius: 12px;
+  margin-top: 150px;
+}
+
 .myaccount{  
     font-size: 18px;
     color:white;
@@ -118,7 +130,7 @@
     text-align: center;
     color: #2874f0;
     font-weight: 500;
-    padding-top: 200px;
+    padding-top: 5px;
     font-size: 12px;
 }
 .terms{
