--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,55 @@
   transform-origin:left;
   transition:transform;  
 }
+.ehingX {
+  display: flex;
+  height: 40px;
+  width: 100%;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: start;
+  justify-content: flex-start;
+  background: rgb(34, 37, 57);
+  overflow-x: auto;
+  white-space: nowrap;
+}
+.bYfeWy {
+  font-size: 14px;
+  cursor: pointer;
+  padding: 0px 10px;
+  position: relative;
+  text-decoration: none;
+  font-weight: 400;
+  color: rgb(204, 204, 204);
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+  margin-left:60px;
+}
 /* .input:focus ~ label {
   transform: translateY(-130%) scale(8.8);
 } */
+.footer-container {
+  background: #333338;
+  text-align: center;
+  height:185px;
+  
+}
+.footer-container p{
+  text-size:10px;
+  color:white;
+  padding:10px;
+  font-size:12px;
+  
+}
+.jZYART {
+  display: flex;
+  margin: 0px auto 0px 0px;
+}
+.hpMgIh {
+  word-break: break-word;
+  color: rgb(51, 51, 51);
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.17;
+}
 
