--- a/css/ticketbooking.css
+++ b/css/ticketbooking.css
@@ -506,4 +506,51 @@ tbody, td, tfoot, th, thead, time, tr, ul, var, video {
   border-color: white;
   margin-left: 20%;
 }
-
+.quantity-input {
+  border: 1px solid #ccc;
+  padding: 5px;
+  text-align: center;
+  width: 40px;
+  margin: 0 10px;
+}
+.plus-button {
+  background-color: #f0f0f0;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.minus-button {
+  background-color: #f0f0f0;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.addMinusBtn{
+  display: flex;
+  margin-top:20px;
+  margin-bottom: 10px;
+  float: right;
+}
+.eventBookHead{
+  color:rgb(119, 119, 119);
+  font-size: 12px;
+  margin-left:380px;
+  margin-top:10px;
+}
+.btnProceed{
+    color: rgb(255, 255, 255);
+    background-color: rgb(248, 68, 100);
+    font-size: 12px;
+    height: 40px;
+    line-height: 25px;
+    width: 160px;
+    text-align: center;
+    border-radius: 4px;
+    border: 1px solid rgb(248, 68, 100);
+    display: block;
+    text-align: center;
+    font-size: large;
+    margin-left:550px;
+    margin-bottom:10px;
+    
+}
