--- a/css/ticketbooking.css
+++ b/css/ticketbooking.css
@@ -554,3 +554,11 @@ tbody, td, tfoot, th, thead, time, tr, ul, var, video {
     margin-bottom:10px;
     
 }
+.addBtn {
+  border: 1px solid rgb(236, 94, 113);
+  padding:10px;
+  background-color: white;
+  color:rgb(236, 94, 113);
+  border-radius: 5px;
+  width:70px;
+}
