--- a/css/login.css
+++ b/css/login.css
@@ -46,16 +46,20 @@
   margin-top: 10px;
   width:300px;
 }
-.label{
-  padding:10px;  
-  
+.div1{
+  display: flex;
+  flex-direction: column;
 }
-.TxtBox{  
-    top: 50px;
-    left: 30px;
-    width: 100%;
-    padding: 13px 0px;
-    font-size: 14px;
+.label{
+  margin-top: 10px;
+  margin-bottom:10px;
+  font-size: 14px;
+  font-weight: bold;
+}
+.TxtBox{ 
+    width: 300px;
+    padding: 10px;
+    font-size: 12px;
     overflow: hidden;
     border-radius: 4px;
     text-align: center;
@@ -65,6 +69,7 @@
     background: rgb(255, 255, 255);
     border: 1px solid rgb(153, 153, 153);
     transition: background 0.5s ease-out 0s;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     cursor: pointer;  
 }
