--- a/css/eventfilter.css
+++ b/css/eventfilter.css
@@ -10,7 +10,7 @@
 }
 .filterDiv {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     -webkit-box-align: stretch;
     align-items: stretch;
     place-content: stretch flex-start;
@@ -29,7 +29,7 @@
     text-transform: capitalize;
     display: flex;
 }
-.headingEventsR {
+.headingEvents {
     margin-bottom: 24px;
     text-transform: capitalize;
     font-size: 24px;
@@ -37,11 +37,70 @@
     line-height: 30px;
     color: rgb(51, 51, 51);
 }
-.headingEventsL {
-    margin-bottom: 24px;
-    text-transform: capitalize;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 30px;
-    color: rgb(51, 51, 51);
+.filterLeft{
+    margin:50px;
+    width:250px;
+}
+.filterRight{
+    margin:50px;
+    
+    
+}
+.eventsList{
+    display: flex;
+    flex-wrap: wrap; 
+}
+.eventImgDate{
+   background-color: black;
+   width:200px;
+   margin-top:-40px;
+   height:30px;
+   border-bottom-left-radius: 10px;
+   border-bottom-right-radius: 10px;
+   color: #f5f5f5;
+   text-align: center;
+}
+.eventRs {
+    margin: 0px 0px 4px;
+    word-break: break-word;
+    color: rgb(102, 102, 102);
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.43;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+.dateFilter {
+    margin-bottom: 12px;
+    padding: 16px;
+    border-radius: 4px;
+    background-color: #f5f5f5;
+    width:320px;
+}
+.arrowDiv{
+    height: 20px;
+    width: 10px;
+    margin-top: -2px;
+    margin-right: 16px;
+    cursor: pointer;
+}
+.flex{
+    display:flex;
+}
+.right1{
+    font-size: 12px;
+    color: rgb(102, 102, 102);
+    cursor: pointer;
+    margin-top:-25px;
+    margin-left:auto;
+}
+.left1{
+    margin-left:25px;
+    margin-top:-25px;
+    font-size: 100%;
+    font-weight: 400;
 }
