--- a/css/eventfilter.css
+++ b/css/eventfilter.css
@@ -43,8 +43,6 @@
 }
 .filterRight{
     margin:50px;
-    
-    
 }
 .eventsList{
     display: flex;
@@ -90,6 +88,7 @@
 }
 .flex{
     display:flex;
+   
 }
 .right1{
     font-size: 12px;
@@ -103,4 +102,19 @@
     margin-top:-25px;
     font-size: 100%;
     font-weight: 400;
+}
+.filterSub {
+    word-break: break-word;
+    color: rgb(220, 53, 75);
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.43;
+    padding:3px;
+    border:1px solid #e3e0e0;   
+    margin:2px;
+    cursor: pointer;
+}
+.dateDetailFilter{
+    margin-top:10px;
 }
