--- a/show/css/style.css
+++ b/show/css/style.css
@@ -12,7 +12,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
-  background-color: #9ebfe0;
+  background-color: #c7bca5;
 }
 button.available {
 
